# LLM_Relay_Bot

./: .coverage  .env.example  .env.template  .gitignore  .venv_python_path  API_KEYS_GUIDE.md  API_KEYS_INTEGRATION_COMPLETE.md  CONFIGURATION_COMPLETE.md  PHASE123_INTEGRATION_COMPLETE.md  PHASE123_QUICKSTART.md  PHASE1_COMPLETE.md  PHASE1_COVERAGE_IMPROVEMENT.md  PHASE1_FINAL_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_FINAL_SUMMARY.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_QUICKSTART.md  PHASE3_STEPS_1-5_COMPLETE.md  PHASE5_INTEGRATION_COMPLETE.md  PHASE_8_INTEGRATION_COMPLETE.md  Procfile  QUICKSTART.md  README.md  compose.yaml  demo.py  demo_integration.py  demo_phase3.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  supervisor.py  webhook_main.py
audit_logging/: __init__.py  canonicalize.py  crypto.py  key_manager.py  log_daemon.py  recovery.py  redaction.py  rotation.py  verifier.py
blog-bot/: blog_scheduler_v2.py  generate_blog.py  run.py  run_blog.sh
claude-gateway/: PRIVACY_POLICY.md  README.md
config/: core.yaml  policy.yaml  schema_registry_index.json  threshold_rules.json
connectors/: __init__.py  base.py  blog_errors.py  blog_utils.py  email_connector.py  errors.py  google_docs_real.py  google_docs_stub.py  idempotency.py  idempotency_store.py  lifecycle.py  local_fs.py  registry.py  results.py  secrets.py  unsplash.py  wordpress.py
coordination/: __init__.py  approval_gate.py  approval_registry.py  approval_tokens.py  deadlock_detector.py  deadlock_graph.py  lock_ids.py  lock_protocol.py  lock_registry.py  phase4_pipeline.py
credentials/: authorize_google.py  google_authorized_token.json  google_oauth_client.json
data/: q_state.json
docker/: Dockerfile.claude-code  Dockerfile.relay-bot
examples/: invalid_path_traversal.json  invalid_unknown_field.json  valid_fs_list_dir.json  valid_fs_read.json  valid_health_ping.json
executor/: __init__.py  engine.py  events.py  models.py  retry_policy.py  rollback.py  sandbox.py  task_id.py  task_queue.py
keys/: approval_private.pem  approval_public.pem  audit_private.pem  audit_public.pem
learning/: prompt_manager.py  q_learner.py
llm_integration/: __init__.py  claude_client.py
logs/: audit.000001 2.jsonl  audit.000001.jsonl  audit.000001.jsonl.bak.1771295047  audit.000001.jsonl.bak.1771295048  audit.000001.jsonl.bak.1771295233  audit.000001.jsonl.bak.1771295342  audit.000001.jsonl.bak.20260216_212304
monitoring/: __init__.py  incident_writer.py  integration_adapters.py  metrics_collector.py  metrics_sink.py  metrics_types.py  monitor_daemon.py  recovery_controller.py  rules_engine.py
(+509 files in other folders)
