[project]
name = "llm-relay"
version = "0.1.0"
description = "Deterministic multi-LLM relay system with strict validation and governance"
authors = [
    {name = "Ethanbrooks23",email = "ethanbrooks@me.com"}
]
requires-python = "^3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "cryptography (>=46.0.4,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
